Finish adding Wishlist feature

--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -19,7 +19,7 @@
           <option value="">All Categories</option>
           <option value="men's clothing">Men's Clothing</option>
           <option value="women's clothing">Women's Clothing</option>
-          <option value="jewelry">Jewelry</option>
+          <option value="jewelery">Jewelery</option>
           <option value="electronics">Electronics</option>
         </select>
         <button class="btn btn-success" type="submit">Search</button>
