--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,9 +1,15 @@
 <nav
-  class="navbar navbar-expand-lg navbar-light bg-light nav fixed-top shadow-sm"
+  class="navbar navbar-expand-lg navbar-light bg-light nav fixed-top shadow-sm pe-4 pe-md-0"
 >
   <div class="container d-flex justify-content-between">
     <div class="logo">
-      <a href="/index.html" class="ms-2">EngageMart</a>
+      <a href="/index.html" class="ms-2">
+        <img
+          src="/images/logo/engage-logo.svg"
+          alt="Logo of Engage Mart"
+          class="engage-logo"
+        />
+      </a>
     </div>
     <div class="d-none d-md-block">
       <form class="ms-auto d-flex" id="searchForm" data-page="index">
